scripts/yaml/basket.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basket
spec:
  template:
    metadata:
      labels:
        app: aksworkshop
        component: basket
    spec:
      containers:
      - name: basket
        image: gabrielgt.azurecr.io/basket
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-gabriel-key
      tolerations:
        - key: virtual-kubelet.io/provider
          value: azure
          effect: NoSchedule
      nodeSelector:
        type: virtual-kubelet
