scripts/yaml/catalog.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog
spec:
  template:
    metadata:
      labels:
        app: aksworkshop
        component: catalog
    spec:
      containers:
      - name: catalog
        image: gabrielgt.azurecr.io/catalog
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-gabriel-key
