scripts/yaml/order.deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: order
spec:
  template:
    metadata:
      labels:
        app: aksworkshop
        component: order
    spec:
      containers:
      - name: order
        image: gabrielgt.azurecr.io/order
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-gabriel-key
