scripts/yaml/basket.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworkshop
    component: basket
  name: basket
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: aksworkshop
    component: basket
