scripts/yaml/sql.service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworkshop
    component: sql
  name: sql
spec:
  ports:
  - port: 1433
    name: sql
  selector:
    app: aksworkshop
    component: sql
