scripts/yaml/website.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: website
spec:
  template:
    metadata:
      labels:
        app: aksworkshop
        component: website
    spec:
      containers:
      - name: website
        image: gabrielgt.azurecr.io/website
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: acr-gabriel-key
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: aksworkshop
    component: website
  name: website
spec:
  type: LoadBalancer
  ports:
  - port: 80
    name: http
  selector:
    app: aksworkshop
    component: website
